<?php
include_once 'Pizza.php';
/**
 * 意大利披萨
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/4
 * Time: 10:44
 */
class PepperoniPizza extends Pizza {

}