<?php
include_once 'Pizza.php';
/**
 * 素食披萨
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/4
 * Time: 10:44
 */
class VeggiePizza extends Pizza {

}