@startuml
SimplePizzaFactory <-- PizzaStore
Pizza <-- SimplePizzaFactory
Pizza <|-- CheesePizza
Pizza <|-- ClamPizza
Pizza <|-- PepperoniPizza
Pizza <|-- VeggiePizza

class PizzaStore

class SimplePizzaFactory

abstract class Pizza
Pizza : prepare()
Pizza : bake()
Pizza : cut()
Pizza : box()

class CheesePizza
class ClamPizza
class PepperoniPizza
class VeggiePizza



@enduml